# cosmic-applets

./: Cargo.toml  justfile
applets/cosmic-app-list/: Cargo.toml
applets/cosmic-applet-time/: Cargo.toml
cosmic-applet-status-area/: Cargo.toml
cosmic-applet-status-area/src/: main.rs
cosmic-applet-status-area/src/components/: app.rs  status_menu.rs
cosmic-applet-status-area/src/subscriptions/: status_notifier_item.rs
cosmic-applet-status-area/src/subscriptions/status_notifier_watcher/: mod.rs
cosmic-applet-time/src/: main.rs
debian/: control
src/: application.rs  dbus_service.rs  main.rs  mpris.rs  notification_list.rs  notification_popover.rs  notifications.rs  power_menu.rs  status_area.rs  status_menu.rs  status_notifier_watcher.rs  time_button.rs  wayland.rs  wayland_custom_surface.rs  window.rs
