[package]
name = "pop-cosmic-panel"
version = "0.1.0"
edition = "2018"
license = "LGPL-3.0-or-later"

[dependencies]
cascade = "1"
chrono = "0.4"
byte_string = "1"
gdk4-x11 = "0.3"
gdk4-wayland = "0.3"
gtk4 = "0.3"
gobject-sys = "0.14.0"
once_cell = "1"
toml = "0.5"
wayland-client = "0.28"
wayland-protocols = { version = "0.28", features = [ "client", "unstable_protocols" ] }
x11 = { version = "2", features = ["xlib"] }
zbus = "1"
